Implemented P3.1–P3.7 — Runtime Semantic Baseline & FEEL Conformance Expansion