@@ -5,7 +5,7 @@ import io.finmsg.dmn.ir.RuntimeModel;
 import java.util.List;
 
 public record DmnEvaluationResult(RuntimeModel model, List<Object> slotValues) {
-  public DmnEvaluationResult { slotValues = List.copyOf(slotValues); }
+  public DmnEvaluationResult { slotValues = java.util.Collections.unmodifiableList(new java.util.ArrayList<>(slotValues)); }
   public Object value(int slot) { return slotValues.get(slot); }
   public Object decisionValue(int decisionId) {
     RuntimeDecision decision = model.decisions().stream().filter(it -> it.id() == decisionId)
